# VT2_ROS

./: .gitignore  .gitmodules  .ycm_extra_conf.py  README.md
catkin_ws/cell_moveit_config/: .setup_assistant
catkin_ws/cell_moveit_config/config/: cell.srdf
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/abb_irb120_support/: build.cmake.000.log.stderr
catkin_ws/logs/abb_irb2400_moveit_plugins/: build.make.000.log.stderr
catkin_ws/logs/abb_irb4400_support/: build.check.006.log.stderr
catkin_ws/logs/cell_core/: build.check.011.log.stderr  build.check.035.log.stderr  build.cmake.000.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.007.log.stderr  build.make.009.log.stderr  build.make.015.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.025.log.stderr  build.make.027.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.034.log.stderr  build.make.038.log.stderr
catkin_ws/logs/ur_modern_driver/: build.make.000.log.stderr
catkin_ws/src/cell_core/: CMakeLists.txt  package.xml
catkin_ws/src/cell_core/include/cell_core/: collisionObject.h
catkin_ws/src/cell_core/launch/: planning.launch  tx260l_montage.launch
catkin_ws/src/cell_core/msg/: status_msg.msg
catkin_ws/src/cell_core/src/: planning.cpp  simple_planning.cpp
catkin_ws/src/cell_core/src/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
catkin_ws/src/cell_core/src/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml
catkin_ws/src/cell_core/srv/: montage_service.srv
catkin_ws/src/cell_irb120_moveit_config/: .setup_assistant
catkin_ws/src/cell_moveit_config/: package.xml
catkin_ws/src/cell_support/: package.xml
catkin_ws/src/cell_tx260l_moveit_config/: CMakeLists.txt  package.xml
catkin_ws/src/http_server/: CMakeLists.txt  package.xml
catkin_ws/src/http_server/include/http_server/: HTTPClient.h  HTTPScript.h  HTTPScript_montage.h  HTTPScript_status.h  XMLParser.h
catkin_ws/src/http_server/src/: HTTPClient.cpp  HTTPNode.cpp  HTTPScript.cpp  HTTPServer.cpp  RealtimeThread.cpp  Timer.cpp  XMLParser.cpp
catkin_ws/src/smc_grippers/: CMakeLists.txt  package.xml
catkin_ws/src/smc_grippers/include/smc_grippers/: CoE.h  EtherCAT.h  RealtimeThread.h  Timer.h  smcService.h
catkin_ws/src/smc_grippers/launch/: smcService.launch
catkin_ws/src/smc_grippers/src/: Mutex.cpp  SMCServoJXCE1.cpp  Thread.cpp
catkin_ws/src/staubli_experimental/staubli_tx260l_support/: CMakeLists.txt  package.xml
catkin_ws/src/staubli_experimental/staubli_tx260l_support/urdf/: tx60l_generated.urdf
catkin_ws/src/ur_modern_driver.git/: packed-refs
cell_moveit_config/: .setup_assistant
cell_moveit_config/config/: cell.srdf  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml
cell_moveit_config/launch/: demo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  warehouse.launch
documentation/: doc.ist  doc.tex  glossar.tex  header.tex
documentation/BibTeX/: 10.1007%2F978-3-319-26054-9_1.bib  10.1007%2F978-3-319-26054-9_3.bib  literatur.bib
documentation/anhang/: CMakeLists.txt  tx260l_macro.xacro
documentation/content/: abstract.tex  anhang.tex  diskussion.tex  einleitung.tex  glossar.tex  grundlagen.tex  implementierungCode.tex  implementierungMoveIt.tex  industriedemonstrator.tex  resultate.tex  rosSetup.tex  titlepage.tex  vorgehen.tex  vorwort.tex
moveit_config/: .setup_assistant  package.xml
moveit_config/config/: cell.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
moveit_config/launch/: move_group.launch  planning_context.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
src/abb_experimental.git/: config  packed-refs
src/cell_core/: CMakeLists.txt  package.xml
src/cell_core/include/cell_core/: collisionObject.h  penAssembly.h  pen_montage.h
src/cell_core/launch/: debug.launch  gui.launch  irb120_montage.launch  pen_montage.launch  pen_sim.launch  tx260l_sim.launch
src/cell_core/msg/: status_msg.msg
src/cell_core/src/: cell_pub.cpp  cell_sub.cpp  collision.cpp  collisionObject.cpp  penAssembly.cpp  pen_montage.cpp  planning.cpp  planning_all.cpp
src/cell_core/src/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
src/cell_core/srv/: montage.srv  moveRobotToPose.srv
src/cell_ethercat/: CMakeLists.txt  package.xml
src/cell_ethercat/include/cell_ethercat/: ethercat_manager.h
src/cell_ethercat/src/: ethercat_manager.cpp
src/cell_irb120_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/cell_irb120_moveit_config/config/: cell.srdf  cell_irb120.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml
src/cell_irb120_moveit_config/launch/: cell_irb120_moveit_controller_manager.launch.xml  cell_moveit_controller_manager.launch.xml  cell_moveit_planning_execution.launch  demo.launch  move_group.launch  moveit.rviz  moveit_planning_execution.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  (+5 more)
src/cell_moveit_config/: .setup_assistant  package.xml
src/cell_support/: CMakeLists.txt  gripper.xacro
src/cell_tx260l_moveit_config/: .setup_assistant  package.xml
src/http_server/: CMakeLists.txt  package.xml
src/http_server/include/http_server/: Channel.h  HTTPNode.h  HTTPScript_montage.h  HTTPScript_status.h  HTTPServer.h  Module.h  Thread.h
src/http_server/launch/: httpNode.launch
src/http_server/msg/: http_msg.msg
src/http_server/src/: AnalogIn.cpp  AnalogOut.cpp  Channel.cpp  DigitalIn.cpp  DigitalOut.cpp  HTTPNode.cpp  HTTPScript_montage.cpp  HTTPScript_status.cpp  LowpassFilter.cpp  Module.cpp  Mutex.cpp  Thread.cpp
src/smc_grippers/: CMakeLists.txt
src/ur_modern_driver.git/: config
(+486 files in other folders)
